# firecrawl-tool

./: .env  README.md  pyproject.toml  requirements.txt  scraped_data_20251024_183431.json  scraper.py  urls.txt
