[project]
name = "firecrawl-scraper"
version = "0.1.0"
description = "Simple web scraper using Firecrawl API that outputs clean markdown with automatic dynamic content handling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=4.5.0",
    "python-dotenv>=1.1.1",
]
